# OpevCV_Base

./: CMakeLists.txt  README.md  sample1.cpp  sample2.cpp  sample3.cpp
